--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:locale" content="es_ES" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Mauricio Massena" />
-    <meta property="og:description" content="Emprendedor dedicado al desarrollador Web Freelance" />
+    <meta property="og:description" content="Freelance Developer" />
     <meta property="og:url" content="https://mauriciomss.github.io/" />
     <meta property="og:site_name" content="Mauricio Massena" />
     <meta property="article:tag" content="web" />
@@ -23,7 +23,7 @@
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Emprendedor dedicado al desarrollador Web Freelance" />
+    <meta name="twitter:description" content="Freelance Developer" />
     <meta name="twitter:title" content="Mauricio Massena" />
     <meta name="twitter:image" content="https://mauriciomss.github.io/img/mauriciomss.png" />
     <!-- / METAS SEO -->
@@ -32,7 +32,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description" content="Mauricio Massena">
-    <meta name="keywords" content="Mauricio Massena, Massena, emprendedor, desarrollador, web, freelance">
+    <meta name="keywords" content="Mauricio Massena, Massena, Freelance Developer, freelance, developer, desarrollador, web">
 
     <meta name="author" content="mauriciomss - https://www.linkedin.com/in/mauricio-massena-92ab4a52">
 
@@ -41,7 +41,7 @@
     <!-- Windows Phone -->
     <meta name="msapplication-navbutton-color" content="#2E6DB4">
 
-    <title>Mauricio Massena - Desarrollador Web Freelance</title>
+    <title>Mauricio Massena - Freelance Developer</title>
 
     <!-- =========================
     FAV AND TOUCH ICONS  
@@ -55,6 +55,16 @@
 
     <!-- Theme CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143156402-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-143156402-1');
+    </script>
 
 </head>
 
@@ -104,7 +114,7 @@
             </div>
 
             <!-- Masthead Subheading -->
-            <p class="masthead-subheading font-weight-light mb-0">Freelance Web Development</p>
+            <p class="masthead-subheading font-weight-light mb-0">Freelance Developer</p>
 
         </div>
     </header>
@@ -228,14 +238,15 @@
 
             <div class="row">
                 <div class="mx-auto w-50 text-center">
-                    <p class="lead">Emprendedor dedicado al desarrollador Web Freelance.</p>
+                    <p class="lead">Freelance Developer</p>
+                    <p class="lead">Emprendedor dedicado al desarrollo Freelance.</p>
+                    <br/>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-lg-4 ml-auto">
+                <div class="col-lg-4 ml-auto text-right" >
                     <p class="lead">PHP, HTML5, CSS3, JavaSript</p>
-                    <p class="lead"></p>
                     <p class="lead">Symfony,jQuery, Bootstrap</p>
                 </div>
                 <div class="col-lg-4 mr-auto">
@@ -248,7 +259,7 @@
             <div class="text-center mt-4">
                 <a class="btn btn-xl btn-outline-light" target="_blank" href="https://www.linkedin.com/in/mauricio-massena-92ab4a52">
                     <i class="fas fa-tasks mr-2"></i>
-                    Experiencia laboral!
+                    Proyectos y Experiencia laboral!
                 </a>
             </div>
 
@@ -308,8 +319,8 @@
 
                 <!-- Footer About Text -->
                 <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-4">Templete CSS</h4>
-                    <p class="lead mb-0">El templete es un tema de uso gratuito con licencia MIT creado por
+                    <h4 class="text-uppercase mb-4">Estilo Web</h4>
+                    <p class="lead mb-0">Es un templete de uso gratuito con licencia MIT creado por
                         <a href="http://startbootstrap.com">Start Bootstrap</a>.
                     </p>
                 </div>
