--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="img/circus.png" alt="">
+                                <img class="img-fluid rounded mb-5" src="img/p_situr.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
                                 <p class="mb-5">Sistema de turnos para colas de espera para el Tribunal de Faltas Municipalidad de Posadas. Generación de turnos con recepcionista, pantalla de atención, posibilidad de atención personalizada, seccionado por sectores, administración de usuarios. Reportes con estadísticas. Pantalla donde se visualiza el llamado del turno.</p>
                                 <p class="mb-5">Desarrollado con PHP, MySQL, HTML5, CSS3, Jquery, Bootstrap.</p>
