--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="img/p_situr.jpg" alt="">
+                                <img class="img-fluid rounded mb-5" src="img/p_fdk.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
                                 <p class="mb-5">Sitio de un carácter institucional, para comunicar información de la fundación, con su historia, funcionamiento, novedades y formas de contacto. Objetivo principal dentro del diseño y desarrollo del sitio es llegar a crear un sitio de una línea formal, estética y amigable en su navegación.</p>
                                 <p class="mb-5">Tecnologías: PHP, Synfony3, HTML5, CSS3, Jquery, Bootstrap, MySQL, API Youtube, Google Maps API.</p>
