--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-info-circle"></i>
                 </div>
                 <div class="divider-custom-line"></div>
             </div>
@@ -132,7 +132,7 @@
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-info-circle"></i>
                 </div>
                 <div class="divider-custom-line"></div>
             </div>
@@ -229,7 +229,7 @@
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-info-circle"></i>
                 </div>
                 <div class="divider-custom-line"></div>
             </div>
@@ -277,7 +277,7 @@
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-info-circle"></i>
                 </div>
                 <div class="divider-custom-line"></div>
             </div>
@@ -366,7 +366,7 @@
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                     <div class="divider-custom-icon">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-info-circle"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
@@ -406,7 +406,7 @@
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                     <div class="divider-custom-icon">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-info-circle"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
@@ -446,7 +446,7 @@
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                     <div class="divider-custom-icon">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-info-circle"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
@@ -486,7 +486,7 @@
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                     <div class="divider-custom-icon">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-info-circle"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
@@ -526,7 +526,7 @@
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                     <div class="divider-custom-icon">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-info-circle"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
@@ -566,7 +566,7 @@
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                     <div class="divider-custom-icon">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-info-circle"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
